--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 html{
     font-size: 1.5rem;
+    font-family: 'Roboto';
+}
+h1{
+    font-family: 'Montserrat';
 }
 .form-check-input{
     size: 10rem;
