added twitter link no responsiveness included yet

--- a/coder-profile/profile.css
+++ b/coder-profile/profile.css
@@ -1,24 +1,25 @@
-.grid-container {
+.prog-container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1% 18% 60% 18%;
       grid-template-columns: 1% 18% 60% 18%;
   -ms-grid-rows: 1%  2% 2% 5% 80%;
       grid-template-rows: 1%  2% 2% 5% 80%;
-      grid-template-areas: ". . . ." ". car av soc" ". car ref soc" ". car ab soc" ". . tes .";
+      grid-template-areas: ". . . . " ". . av ." ". car ref soc" ". car ab soc" ". . tes soc";
   grid-gap: 0.1% 1%;
 }
 
 #soc {
-  -ms-grid-row: 2;
+  -ms-grid-row: 3;
   -ms-grid-row-span: 3;
   -ms-grid-column: 4;
   grid-area: soc;
+  width: 100%;
 }
 
 #car {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
   -ms-grid-column: 2;
   grid-area: car;
 }
